WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33122
[Qt] RenderTheme: Missing support for native sliders
https://bugs.webkit.org/show_bug.cgi?id=33122
Summary
[Qt] RenderTheme: Missing support for native sliders
Jakub Wieczorek
Reported
2010-01-03 13:17:33 PST
QtWebKit needs to suppport painting native sliders to get <input type="range"> working.
Attachments
Patch
(10.09 KB, patch)
2010-01-03 13:21 PST
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
Patch
(10.30 KB, patch)
2010-01-04 13:00 PST
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jakub Wieczorek
Comment 1
2010-01-03 13:21:46 PST
Created
attachment 45758
[details]
Patch
WebKit Review Bot
Comment 2
2010-01-03 13:22:22 PST
style-queue ran check-webkit-style on
attachment 45758
[details]
without any errors.
Jakub Wieczorek
Comment 3
2010-01-04 11:22:54 PST
Comment on
attachment 45758
[details]
Patch Clearing review flag as I spotted a defect with vertical sliders with this patch.
Jakub Wieczorek
Comment 4
2010-01-04 13:00:00 PST
Created
attachment 45822
[details]
Patch Fixed RenderThemeQt::adjustSliderThumbSize() to work properly with vertical sliders.
WebKit Review Bot
Comment 5
2010-01-04 13:04:09 PST
style-queue ran check-webkit-style on
attachment 45822
[details]
without any errors.
Adam Treat
Comment 6
2010-01-05 13:04:50 PST
Comment on
attachment 45822
[details]
Patch Looks real good :) r=me
WebKit Commit Bot
Comment 7
2010-01-06 19:37:58 PST
Comment on
attachment 45822
[details]
Patch Clearing flags on attachment: 45822 Committed
r52896
: <
http://trac.webkit.org/changeset/52896
>
WebKit Commit Bot
Comment 8
2010-01-06 19:38:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug